# diffsitter

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  Cargo.toml  Cross.toml  Dockerfile  LICENSE  README.md  build.rs  clippy.toml  index.md  notes.md  test_a.js  test_b.js
.claude/: settings.json
.claude/agents/: architect.md  code-reviewer.md  test-writer.md
.claude/rules/: code-review-standards.md  commit-conventions.md  project-conventions.md  rust-quality.md
.claude/scripts/: worktree-create.sh  worktree-remove.sh
.claude/skills/add-grammar/: SKILL.md
.claude/skills/add-renderer/: SKILL.md
.claude/skills/debug-diff/: SKILL.md
.claude/skills/rust-expert/: SKILL.md
.config/: nextest.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: CD.yml  CI.yml  clippy_lint.yml  coverage.yml  post-deploy.yml  publish_optimized_binary.yml  release-drafter.yml  release_drafter.yml  rust.yml  update-homebrew.yml  update_homebrew_tap.yml
assets/: git-diffsitter  homebrew_formula.rb  sample_config.json  sample_config.json5  test_config.toml
benches/: ast_navigation_bench.rs
deployment/: brew_packager.py  generate_formulae.py  git-archive-all.bash
deployment/macos/homebrew/: homebrew_formula.rb.template
dev_scripts/: build_with_sanitizer.bash  update_dependencies.bash
docs/: CONTRIBUTING.md
etc/: example-gitattributes  example-gitconfig
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_node_to_info.rs  fuzz_parse_and_navigate.rs  fuzz_query.rs
plugins/tree-sitter-mcp/: .mcp.json  README.md  hooks.json  plugin.json
plugins/tree-sitter-mcp/.claude-plugin/: plugin.json
plugins/tree-sitter-mcp/agents/: ast-explorer.md
plugins/tree-sitter-mcp/scripts/: ensure-binary.sh  plugin.schema.json  validate-plugin.sh
plugins/tree-sitter-mcp/skills/ast-navigation/: SKILL.md
resources/test_configs/: partial_section_1.json  partial_section_1.toml  partial_section_2.json  partial_section_3.json  partial_section_3.toml
skills/diffsitter/: SKILL.md
src/: ast.rs  ast_navigation.rs  cli.rs  config.rs  console_utils.rs  diff.rs  figment_utils.rs  formatting.rs  input_processing.rs  lib.rs  main.rs  mcp_server.rs  neg_idx_vec.rs  parse.rs  string_utils.rs  test_utils.rs
src/render/: delta.rs  json.rs  mod.rs  unified.rs
src/snapshots/: diffsitter__tests__diff_hunks_snapshot___short_python_py_-2.snap  diffsitter__tests__diff_hunks_snapshot___short_rust_rs_.snap  diffsitter__tests__diff_hunks_snapshot__medium_cpp.snap  diffsitter__tests__diff_hunks_snapshot__medium_rust.snap  diffsitter__tests__diff_hunks_snapshot__short_python.snap  diffsitter__tests__diff_hunks_snapshot__short_rust.snap  diffsitter__tests__medium_cpp.snap  diffsitter__tests__medium_cpp_false.snap  diffsitter__tests__medium_cpp_true.snap  diffsitter__tests__medium_rust.snap  diffsitter__tests__medium_rust_false.snap  diffsitter__tests__medium_rust_true.snap  diffsitter__tests__short_go_true.snap  diffsitter__tests__short_python.snap  diffsitter__tests__short_python_true.snap  diffsitter__tests__short_rust.snap  diffsitter__tests__short_rust_true.snap
src/term_ui/: chars.rs  mod.rs  term_box.rs
test_data/: test_1_b.rs
test_data/ast_navigation/: c_sample.c  cpp_sample.cpp  deeply_nested.rs  go_sample.go  java_sample.java  python_sample.py  rust_sample.rs  typescript_sample.ts  unicode_heavy.rs
test_data/medium/cpp/: a.cpp  b.cpp
test_data/medium/rust/: a.rs  b.rs
test_data/short/go/: a.go  b.go
test_data/short/markdown/: a.md  b.md
test_data/short/python/: a.py  b.py
test_data/short/rust/: a.rs
tests/: ast_navigation_proptest.rs  ast_navigation_test.rs  mcp_server_test.rs  regression_test.rs
tests/snapshots/: ast_navigation_test__tests__get_definition_rust_point.snap  ast_navigation_test__tests__get_scope_deeply_nested.snap  ast_navigation_test__tests__list_symbols_python.snap  ast_navigation_test__tests__list_symbols_rust.snap  ast_navigation_test__tests__parse_file_root_rust.snap  ast_navigation_test__tests__run_query_rust_functions.snap  regression_test__tests__medium_cpp_false.snap  regression_test__tests__medium_cpp_split_graphemes_false_strip_whitespace_true.snap  regression_test__tests__medium_cpp_split_graphemes_true_strip_whitespace_true.snap  regression_test__tests__medium_cpp_true.snap  regression_test__tests__medium_rust_false.snap  regression_test__tests__medium_rust_split_graphames_false_strip_whitespace_false.snap  regression_test__tests__medium_rust_split_graphemes_false_strip_whitespace_false.snap  regression_test__tests__medium_rust_split_graphemes_true_strip_whitespace_false.snap  regression_test__tests__medium_rust_true.snap  regression_test__tests__short_go_split_graphames_true_strip_whitespace_true.snap  regression_test__tests__short_go_split_graphemes_true_strip_whitespace_true.snap  regression_test__tests__short_go_true.snap  regression_test__tests__short_markdown_split_graphemes_false_strip_whitespace_true.snap  regression_test__tests__short_markdown_split_graphemes_true_strip_whitespace_true.snap  regression_test__tests__short_python_split_graphames_true_strip_whitespace_true.snap  regression_test__tests__short_python_split_graphemes_true_strip_whitespace_true.snap  regression_test__tests__short_python_true.snap  regression_test__tests__short_rust_split_graphemes_true_strip_whitespace_true.snap  regression_test__tests__short_rust_true.snap
