[package]
name = "diffsitter"
description = "An AST based difftool for meaningful diffs"
readme = "README.md"
version = "0.8.0"
authors = ["Afnan Enayet <afnan@afnan.io>"]
edition = "2021"
license = "MIT"
keywords = ["diff", "ast", "difftool"]
categories = ["command-line-utilities"]
build = "build.rs"
homepage = "https://github.com/afnanenayet/diffsitter"
repository = "https://github.com/afnanenayet/diffsitter"
include = [
  "src/**/*",
  "LICENSE",
  "README.md",
  "grammars/**/*.c",
  "grammars/**/*.cc",
  "grammars/**/*.cpp",
  "grammars/**/*.h",
  "grammars/**/*.hpp",
  "build.rs",
  "!**/*.png",
  "!**/test/**/*",
  "!**/*_test.*",
  "!**/examples/**/*",
  "!**/target/**/*",
  "!assets/*",
]
default-run = "diffsitter"

[[bin]]
name = "diffsitter"
path = "src/bin/diffsitter.rs"

[[bin]]
name = "diffsitter_completions"
path = "src/bin/diffsitter_completions.rs"

[lib]
name = "libdiffsitter"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tree-sitter = "0.20.10"
clap = { version = "4.3.11", features = [
  "derive",
  "env",
  "unicode",
  "wrap_help",
] }
clap_complete = "4.3.2"
anyhow = { version = "1.0.71", features = ["backtrace"] }
phf = { version = "0.11.2", features = ["macros"] }
console = "0.15.7"
strum = { version = "0.25.0", features = ["derive"] }
strum_macros = "0.25.1"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.100"
json5 = "0.4.1"
pretty_env_logger = "0.5.0"
log = { version = "0.4.19", features = ["std"] }
thiserror = "1.0.43"
logging_timer = "1.1.0"
jemallocator = { version = "0.5.0", optional = true }
libloading = "0.8.0"
unicode-segmentation = "1.10.1"
human-panic = "1.1.5"
shadow-rs = { version = "0.23.0", optional = true }
enum_dispatch = "0.3.12"

[dev-dependencies]
test-case = "3.1.0"
pretty_assertions = "1.4.0"
mockall = "0.11.4"

# We need the backtrace feature to enable snapshot name generation in
# single-threaded tests (tests using cargo cross run single-threaded due to
# limitations with QEMU).
insta = { version = "1.30.0" }

[target.'cfg(target_os = "windows")'.dependencies]
# We use directories next to get the windows config path
directories-next = "2.0.0"

[target.'cfg(not(target_os = "windows"))'.dependencies]
# We use XDG for everything else
xdg = "2.5.0"

[build-dependencies]
cc = { version = "1.0.79", features = ["parallel"] }
phf = { version = "0.11.2", features = ["macros"] }
anyhow = "1.0.71"
cargo-emit = "0.2.1"
rayon = "1.7.0"
thiserror = "1.0.43"
shadow-rs = { version = "0.23.0", optional = true }

[features]
default = ["static-grammar-libs"]

# Enable full build info as a subcommand. This takes longer to build so it's
# generally just enabled for releases.
better-build-info = ["shadow-rs"]

# Enable dynamically loading libraries instead of compiling the libraries as
# submodules.
dynamic-grammar-libs = []

# Compile the static tree-sitter grammars from the submodules in this repo.
static-grammar-libs = []

[profile.production]
inherits = "release"
lto = true
codegen-units = 1
# Makes the binary a little smaller
strip = true
